--- a/cv-projet-N1.html
+++ b/cv-projet-N1.html
@@ -15,6 +15,10 @@
             <div class="info">
                 <div class="nom">Sana BENGANNOUNE</div>
                 <div class="monprofil">Projet d'une developpeuse</div>
+                <div id="presentation">
+                    <p>Je me prépare d’être une développeuse web ayant des compétences et d’être capable de participer à la réalisation
+                    des nouveaux projets au niveau de la conception et de la programmation.</p> 
+                </div>
                 <div class="contact">
                     <div class="lien-icon">
                         <a href="mailto:sana.bengannoune@gmail.com">sana.bengannoune@gmail.com</a> 
@@ -23,10 +27,7 @@
                         <a href="063-399-5356">063-399-5356</a>
                     </div>
                 </div> <!--fin contact-->
-                <div id="presentation">
-                    <p>Je me prépare d’être une développeuse web ayant des compétences et d’être capable de participer à la réalisation<br>
-                    des nouveaux projets au niveau de la conception et de la programmation.</p> 
-                </div>
+                
                                  
             </div>
         </div> <!--fin section infophoto-->
